# ghview

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  config.example.toml  justfile
.github/workflows/: ci.yml
scripts/: anonymize-fixtures.py  capture-fixtures.sh
src/: actions.rs  config.rs  data.rs  keys.rs  lib.rs  main.rs  types.rs
src/app/: event_loop.rs  handlers.rs  mod.rs  nav.rs  triggers.rs
src/ui/: markdown.rs  mod.rs  overlays.rs  panels.rs  status.rs
tests/: data_parse.rs  handle_data.rs  render.rs  smoke.rs
tests/common/: builders.rs  gh_mock.rs  inflate.rs  mod.rs
tests/fixtures/: check_runs.json  diff.txt  issue_body.md  issues.jsonl  orgs.txt  orgs_page_full.txt  pr_body.json  prs.jsonl  prs_all_malformed.jsonl  prs_malformed.jsonl  rate_limit.txt  readme.md  repo_description.txt  repos_org.jsonl  repos_user.jsonl  source_issues.jsonl  source_prs.jsonl  viewer_permission.json  workflow_runs.json
tests/snapshots/: render__dependabot_menu_overlay_shown.snap  render__detail_frontpage.snap  render__detail_issue_list.snap  render__detail_issues.snap  render__detail_pr_list.snap  render__detail_prs.snap  render__diff_view_overlay_shown.snap  render__direct_frontpage.snap  render__direct_issues.snap  render__direct_prs.snap  render__empty_app.snap  render__help_overlay_shown.snap  render__help_overlay_shown_direct_repo.snap  render__medium_80x24.snap  render__narrow_60x20.snap  render__preview_issue_list.snap  render__preview_pr_list.snap  render__preview_repo_list.snap  render__preview_repo_list_direct_source.snap  (+2 more)
(+8 files in other folders)
