[package]
name = "ghview"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ghview"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
color-eyre = "0.6"
futures = "0.3"
jiff = "0.2"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
unicode-width = "0.2"
shellexpand = "3"
pulldown-cmark = { version = "0.13.3", default-features = false }
rattles = "0.3.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 3
